# PoC-GoLib

./: .gitignore  LICENSE  MANIFEST.in  MULTIPLATAFORMA.md  PRODUCTION_GUIDE.md  README.md  SETUP_GUIDE.md  azure_config_example.py  azure_simple_example.py  azure_ultra_simple_example.py  build-dist.sh  build.sh  compile-all-platforms.sh  demo.py  example.py  fix_library.sh  go.mod  go.sum  install.sh  lib.go  main.py  production_examples.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml
dist_full/: libcorehey-1.0.0-py3-none-any.whl
dist_temp/: libcorehey-1.0.0-py3-none-any.whl
libcorehey/: __init__.py  core.py
